Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-114105

Custom item selection does not work

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.6.0
    • 6.6
    • Graphs: 3D
    • None
    • c501a8881 (6.6), fe7acf9aa (dev)

    Description

      It is not possible to select custom items. Try picking one of the custom items in widgetgraphgallery > surface graph > multiseries height map and a point underneath the item gets selected.

      Attachments

        For Gerrit Dashboard: QTBUG-114105
        # Subject Branch Project Status CR V

        Activity

          People

            oulu_hillbilly Sami Varanka
            tokorpip Tomi Korpipää
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes