Enable custom item picking

If the graph has custom items, do raycasting for
them in QQuickGraphsItem's doPicking and do not
let subclasses do their picking if custom item is
picked. Connect QAbstractGraph's
selectedElementChanged signal to
QQuickGraphsItem's selectedElementChanged signal.

Task-number: QTBUG-114105
Pick-to: 6.6
Change-Id: Ib6146832559cc39f92a1eee7a7a344236969a1e8
Reviewed-by: Dilek Akcay <dilek.akcay@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>