src/graphs/engine/abstract3dcontroller.cpp
@@ -527,6 +527,7 @@ QList<QCustom3DItem *> Abstract3DController::customItems() const
 void Abstract3DController::updateCustomItem()
 {
     m_isCustomItemDirty = true;
+    m_isCustomDataDirty = true;
     emitNeedRender();
 }
 
